Fixed logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     max-width: 450px;
     height: auto;
     margin-bottom: 50px;
+    margin-top: 10px;
 
     animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 2.5s; /* don't forget to set a duration! */
